--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">marketmedia</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse" id="navbarColor02">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Market</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
+<app-navbar></app-navbar>
 <main class="container mt-3">
   <router-outlet></router-outlet>
 </main>
