--- a/src/app/components/market-items/market-items.component.html
+++ b/src/app/components/market-items/market-items.component.html
@@ -1,8 +1,9 @@
-<div class="card card-column mb-2">
-  <div class="card-body">
+
+<div class="card">
+  <img class="card-img-top" src="../../../assets/img/img-placeholder.jpg" alt="Card image cap">
+  <span class="badge badge-price">&#8369;{{item.price | number:'1.2'}}</span>
+  <div class="p-3 m-0">
     <h5 class="card-title">{{item.name}}</h5>
-    <p class="card-text font-weight-bold">Price: {{item.price | number:'1.2'}}</p>
-    <p class="card-text">Category: {{item.category}}</p>
-    <p class="card-text text-muted">{{item.datePosted | date:'medium'}}</p>
+    <p class="card-text text-muted">{{item.datePosted | date}} | Pagadian City</p>
   </div>
 </div>
