--- a/src/app/components/market-options/market-options.component.html
+++ b/src/app/components/market-options/market-options.component.html
@@ -1,10 +1,29 @@
-<aside class="side-nav bg-secondary p-3">
-  <div>
-    <span class="align-middle">
-      <button class="btn btn-primary btn-sm">Sell Something</button>
-    </span>
+<aside class="side-nav p-3">
+  <button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modalNewItem">
+    Sell Something
+  </button>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt, amet perspiciatis deserunt saepe dolore debitis
-      omnis hic. Sint aperiam reprehenderit maxime dolorum porro quidem vel eius sed animi autem.</p>
-  </div>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta nesciunt, amet perspiciatis deserunt saepe dolore debitis
+    omnis hic. Sint aperiam reprehenderit maxime dolorum porro quidem vel eius sed animi autem.</p>
+
 </aside>
+
+<!-- Modal -->
+<div class="modal fade" id="modalNewItem" tabindex="-1" role="dialog" aria-labelledby="modalNewItemTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">market media</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-item-form></app-item-form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
