--- a/src/app/components/market/market.component.html
+++ b/src/app/components/market/market.component.html
@@ -1,17 +1,14 @@
 <div class="row">
   <div class="col-md-2">
 
-    <app-market-options
-      class="options position-fixed">
-    </app-market-options>
+    <app-market-options></app-market-options>
 
   </div>
   <div class="col-md-10">
 
-    <app-market-items
-      *ngFor="let item of items | async"
-      [item]="item">
-    </app-market-items>
+    <div class="card-columns p-2 bg-light">
+      <app-market-items *ngFor="let item of items | async" [item]="item"></app-market-items>
+    </div>
 
   </div>
 </div>
