--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootswatch/dist/lumen/bootstrap.css";
+@import '~bootswatch/dist/lumen/bootstrap.min.css';
 
 body, html {
   padding-top: 28px;
