--- a/src/app/shared/item-form/item-form.component.html
+++ b/src/app/shared/item-form/item-form.component.html
@@ -1,22 +1,28 @@
-<form>
+<form [formGroup]="itemForm" (ngSubmit)="onSubmit()">
   <div class="row">
     <div class="col-md-7">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="What are you selling">
+        <input type="text" formControlName="name" class="form-control" placeholder="What are you selling">
       </div>
     </div>
     <div class="col-md-5">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="How much">
+        <input type="number" min="0" formControlName="price" class="form-control" placeholder="How much">
       </div>
     </div>
   </div>
   <div class="form-group">
-    <select class="custom-select">
-      <option selected="">Select a category</option>
+    <select class="custom-select" formControlName="categoryId">
+      <option selected="" value="">Select a category</option>
       <option *ngFor="let c of categories | async" [value]="c.id">
         {{c.name}}
       </option>
     </select>
   </div>
+
+  <button type="submit" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modalNewItem" [disabled]="itemForm.invalid">Submit</button>
+
+  <button type="button" class="btn btn-secondary btn-sm" (click)="clear()">Clear</button>
 </form>
+
+{{ itemForm.value | json}}
