Updated the implentation of details page

--- a/src/app/components/market-items/market-items.component.css
+++ b/src/app/components/market-items/market-items.component.css
@@ -6,3 +6,16 @@
   top: -2em;
   border-radius: 0;
 }
+
+.details-link {
+  text-decoration: none;
+  color: #333;
+}
+
+.card {
+  transition: all 0.4s ease;
+}
+
+.card:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
