--- a/src/app/components/market/market.component.html
+++ b/src/app/components/market/market.component.html
@@ -6,9 +6,13 @@
   </div>
   <div class="col-md-10">
 
-    <div class="card-columns p-2 bg-light">
+    <div class="card-columns p-3 bg-light position-obsolute">
+
       <app-market-items *ngFor="let item of itemService.items | async" [item]="item"></app-market-items>
+
     </div>
 
   </div>
 </div>
+
+<router-outlet></router-outlet>
