--- a/src/app/components/item-details/item-details.component.html
+++ b/src/app/components/item-details/item-details.component.html
@@ -7,7 +7,37 @@
 
     <div class="row">
       <div class="col-md-9">
-        <img src="../../../assets//img/img-placeholder.jpg" class="img-top" width="100%">
+
+        <!-- <img src="../../../assets//img/img-placeholder.jpg" class="img-top" width="100%"> -->
+
+        <div id="carouselImageItems" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselImageItems" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselImageItems" data-slide-to="1"></li>
+            <li data-target="#carouselImageItems" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="../../../assets//img/img-placeholder.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../../../assets//img/img-placeholder.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../../../assets//img/img-placeholder.jpg" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselImageItems" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselImageItems" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+
       </div>
       <div class="col-md-3">
         <div class="container">
@@ -31,7 +61,8 @@
             </div>
           </div>
 
-          <button class="button" class="btn btn-primary btn-block">Contact now</button>
+          <button class="button" class="btn btn-primary">Update</button>
+          <button class="button" class="btn btn-danger">Delete</button>
         </div>
       </div>
     </div>
