--- a/src/app/market/market.component.html
+++ b/src/app/market/market.component.html
@@ -8,7 +8,8 @@
 
     <div class="card-columns p-3 bg-light position-obsolute">
 
-      <app-market-items *ngFor="let item of itemService.items | async" [item]="item"></app-market-items>
+      <app-market-items *ngFor="let item of itemService.items | async" [item]="item">
+      </app-market-items>
 
     </div>
 
