--- a/src/app/market/components/item-details/item-details.component.html
+++ b/src/app/market/components/item-details/item-details.component.html
@@ -62,7 +62,7 @@
           </div>
 
           <button class="button" class="btn btn-primary">Update</button>
-          <button class="button" class="btn btn-danger">Delete</button>
+          <button class="button" class="btn btn-danger" (click)="deleteItem()">Delete</button>
         </div>
       </div>
     </div>
