implemented the deletion of an item

--- a/src/app/market/components/market-options/market-options.component.html
+++ b/src/app/market/components/market-options/market-options.component.html
@@ -19,7 +19,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <app-item-form></app-item-form>
+        <app-item-form [itemId]="0"></app-item-form>
       </div>
     </div>
   </div>
